--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -3,8 +3,8 @@
 
 {% block main-inner %}
 <div class="white-bg">
+  <h2>Course Documents</h2>
   <div class="half-flexy">
-    <h2>Course Documents</h2>
     <div class="column fixed-image">
       <a href="https://docs.google.com/document/d/1SNSig26asEb7QF5tgdQoedp5OqafxsqGw_3aiU5-MZo/edit?usp=sharing">
         <div class="img" style="background-image: url({% static "crafters/flood_recovery.png" %})"></div>
@@ -47,6 +47,8 @@
         <li>Red Flags - Find out what to look for to spot deals that may be too good to be true.</li>
       </ul>
       -->
+</div>
+<div class="white-bg">
   <div class="list">
     <h2>Resources</h2>
     <li><a href="http://www.HoustonRecovers.org">HoustonRecovers.org</a></li>
