another number, small changes

--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -251,6 +251,8 @@ h2 { font-size: 1.8rem; margin-bottom: 1rem; text-align: center; }
     &:before {
       content: "\f095 ";
       font-family: FontAwesome;
+      display: inline-block;
+      padding-right: 10px;
     }
   }
 }
