--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -51,6 +51,7 @@
 <div class="white-bg">
   <div class="list">
     <h2>Resources</h2>
+    <li><a href="tel:844-965-1386">844-965-1386</a> Crisis Cleanup</li>
     <li><a href="http://www.HoustonRecovers.org">HoustonRecovers.org</a></li>
     <li><a href="http://harrisrecovery.org">Harris County</a></li>
     <li><a href="https://www.disasterassistance.gov/">FEMA</a></li>
@@ -94,11 +95,12 @@
       These one hour seminars will cover how to navigate the process of getting your house clean,
       dealing with insurance companies and FEMA, and dealing with contractors and some resources for DIY remodelers.
     </p>
-      <li>Friday September 15, 7pm-8pm</li>
-      <li>Saturday September 16, 11am-12pm</li>
-      <li>Monday September 18, 10am-11am</li>
-      <li>Friday September 22, 7pm-8pm</li>
-      <li>Saturday September 23, 1pm-2pm</li>
+    <!--<li>Friday September 15, 7pm-8pm</li>
+    <li>Saturday September 16, 11am-12pm</li>
+    <li>Monday September 18, 10am-11am</li>-->
+    <li>Friday September 22, 7pm-8pm</li>
+    <li>Saturday September 23, 1pm-2pm</li>
+    <li>Sunday September 24, 10:30 am - 1:30 pm</li>
   </div>
 
   <div class="list">
