--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -89,7 +89,7 @@
       <div id="alert-div"></div>
     </div>
     {% block footer %}{% include "footer.html" %}{% endblock %}
-    {% include "_airbreak.html" %}
+    {% include "_airbrake.html" %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/riot/2.6.7/riot+compiler.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown.js/0.5.0/markdown.min.js"></script>
     {% if request.path == "/admin/dashboard/" %}
