--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -293,6 +293,9 @@ h2 { font-size: 1.8rem; margin-bottom: 1rem; text-align: center; }
     margin-bottom: 1rem;
     width: 100%;
   }
+  &.video .img {
+    .fixed-ratio(900%/16);
+  }
   b { display: block; }
   a { display: block; font-weight: bold; text-decoration: underline; }
   @media (max-width: @screen-sm-max) {
