--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -25,7 +25,7 @@
     </div>
     <div class="column fixed-image">
       <a href="https://docs.google.com/document/d/1f3aI_USzoiBMB43ERKvdkif7nR5nyRrPbjzxcMZUQws/edit?usp=sharing">
-        <div class="img" style="background-image: url({% static "crafters/documentacion.png" %})"></div>
+        <div class="img" style="background-image: url({% static "crafters/flood_cleanup.png" %})"></div>
         <b>Flood Damage Cleanup Tips</b>
       </a>
     </div>
@@ -36,6 +36,12 @@
         Black and White</a>
       <a href="https://drive.google.com/file/d/0BwBXk4vJz3BzZkYwUDVVYi1JYmsyLVo3NWlJc0R6RXJKYnFz/view?usp=sharing">
         Color</a>
+    </div>
+    <div class="column fixed-image video">
+      <a href="https://youtu.be/MB-BA33ayZ0">
+        <div class="img" style="background-image: url(https://i.ytimg.com/vi/MB-BA33ayZ0/mqdefault.jpg)"></div>
+        <b>Disaster Relief Seminar</b>
+      </a>
     </div>
   </div>
   <!--
@@ -74,7 +80,8 @@
     <h2>Other Helpful Resources</h2>
     <li><a href="https://apps.twc.state.tx.us/UBS/security/logon.do">Disaster Unemployment Assistance</a></li>
     <li><a href="tel:713-308-8580">713-308-8580</a> Locate your towed car</li>
-    <li><a href="tel:1-866-901-3773">1-866-901-3773</a> Kidney Community Emergency Response coalition. Help find the nearest dialysis center</li>
+    <li><a href="tel:1-866-901-3773">1-866-901-3773</a>
+      Kidney Community Emergency Response coalition. Help find the nearest dialysis center</li>
   </div>
 
   <div class="list">
@@ -101,12 +108,16 @@
     <li>Friday September 22, 7pm-8pm</li>
     <li>Saturday September 23, 1pm-2pm</li>
     <li>Sunday September 24, 10:30 am - 1:30 pm</li>
+    <li>Friday September 29, 7pm-8pm</li>
+    <li>Friday October 6, 7pm-8pm</li>
   </div>
 
   <div class="list">
     <h2>DIY Drywall and Trim Carpentry</h2>
     <p class="note">This workshop will cover how to remove and replace drywall and insulation and how to finish drywall. How to  do  finish carpentry  like  trim  and molding will also be reviewed. Participants will learn tips on measuring and marking which is a necessary first step for this kind of task.</p>
       <li>Sunday September 24, 10:30 am - 1:30 pm</li>
+      <li>Saturday September 30, 4-7 pm</li>
+      <li>Sunday October 8, 12-3 pm</li>
   </div>
 
   <p class="note">
