--- a/main/templates/_nav.html
+++ b/main/templates/_nav.html
@@ -59,7 +59,7 @@
           </a></li>
           {% endfor %}
           {% else %}
-          <li><a class="fa-hover txrx" href="#/form/membership.RegistrationForm/">
+          <li><a class="fa-hover txrx" href="#/auth/register/">
               <i class="fa fa-user"></i> Register</a></li>
           <li><a class="fa-hover txrx" href="#/auth/login/">
               <i class="fa fa-user"></i> Log in with Username</a></li>
