--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -234,7 +234,11 @@ footer {
   }
 }
 
-h2 { font-size: 1.8rem; margin-bottom: 1rem; text-align: center; }
+h2 {
+  font-size: 1.8rem;
+  margin: 0 0 1rem;
+  text-align: center;
+}
 
 .white-bg .list {
   margin: 0 auto 2rem;
