--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -96,28 +96,30 @@
 </div>
 
 <div class="white-bg" id="seminars">
-  <div class="list">
-    <h2>Harvey Relief Seminar</h2>
-    <p class="note">
-      These one hour seminars will cover how to navigate the process of getting your house clean,
-      dealing with insurance companies and FEMA, and dealing with contractors and some resources for DIY remodelers.
-    </p>
-    <!--<li>Friday September 15, 7pm-8pm</li>
-    <li>Saturday September 16, 11am-12pm</li>
-    <li>Monday September 18, 10am-11am</li>-->
-    <li>Friday September 22, 7pm-8pm</li>
-    <li>Saturday September 23, 1pm-2pm</li>
-    <li>Sunday September 24, 10:30 am - 1:30 pm</li>
-    <li>Friday September 29, 7pm-8pm</li>
-    <li>Friday October 6, 7pm-8pm</li>
-  </div>
+  <div class="half-flexy">
+    <div class="list column">
+      <h2>Harvey Relief Seminar</h2>
+      <p class="note">
+        These one hour seminars will cover how to navigate the process of getting your house clean,
+        dealing with insurance companies and FEMA, and dealing with contractors and some resources for DIY remodelers.
+      </p>
+      <!--<li>Friday September 15, 7pm-8pm</li>
+          <li>Saturday September 16, 11am-12pm</li>
+      <li>Monday September 18, 10am-11am</li>
+      <li>Friday September 22, 7pm-8pm</li>
+      <li>Saturday September 23, 1pm-2pm</li>-->
+      <li>Sunday September 24, 10:30 am - 1:30 pm</li>
+      <li>Friday September 29, 7pm-8pm</li>
+      <li>Friday October 6, 7pm-8pm</li>
+    </div>
 
-  <div class="list">
-    <h2>DIY Drywall and Trim Carpentry</h2>
-    <p class="note">This workshop will cover how to remove and replace drywall and insulation and how to finish drywall. How to  do  finish carpentry  like  trim  and molding will also be reviewed. Participants will learn tips on measuring and marking which is a necessary first step for this kind of task.</p>
+    <div class="list column">
+      <h2>DIY Drywall and Trim</h2>
+      <p class="note">This workshop will cover how to remove and replace drywall and insulation and how to finish drywall. How to  do  finish carpentry  like  trim  and molding will also be reviewed. Participants will learn tips on measuring and marking which is a necessary first step for this kind of task.</p>
       <li>Sunday September 24, 10:30 am - 1:30 pm</li>
       <li>Saturday September 30, 4-7 pm</li>
       <li>Sunday October 8, 12-3 pm</li>
+    </div>
   </div>
 
   <p class="note">
