--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -57,7 +57,8 @@
 <div class="white-bg">
   <div class="list">
     <h2>Resources</h2>
-    <li><a href="tel:844-965-1386">844-965-1386</a> Crisis Cleanup</li>
+    <li>To sign up for volunteer assistance in cleaning out flood damage in your home, call:<br/>
+      <a href="tel:844-965-1386">844-965-1386</a> Crisis Cleanup</li>
     <li><a href="http://www.HoustonRecovers.org">HoustonRecovers.org</a></li>
     <li><a href="http://harrisrecovery.org">Harris County</a></li>
     <li><a href="https://www.disasterassistance.gov/">FEMA</a></li>
