turning evaluations back on

--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -102,6 +102,7 @@
   </div>
   <div class="col-xs-12 col-sm-4 col-md-3 pull-right" id="side">
     <session-list></session-list>
+    <h3>Share this class</h3>
     <center>{% include "_social.html" with thing=course %}</center>
     <br/>
     <center><button class="btn btn-danger return_policy" onclick="$('.session_return_policy').toggle();return false;">
