--- a/course/templates/course/instructor_session.html
+++ b/course/templates/course/instructor_session.html
@@ -33,7 +33,7 @@
       <div class="accordion-group">
         {% for evaluation in session.get_evaluations.all %}
         <div class="accordion-heading">
-          <a class="accordion-toggle row" data-parent="#evaluation_panel"
+          <a class="accordion-toggle" data-parent="#evaluation_panel"
              data-toggle="collapse" href="#evaluation_number_{{ evaluation.id }}">
             {% for name,number,comments in evaluation.get_number_tuples %}
             <span class="span3">
