--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -108,16 +108,16 @@
           <li>Saturday September 16, 11am-12pm</li>
       <li>Monday September 18, 10am-11am</li>
       <li>Friday September 22, 7pm-8pm</li>
-      <li>Saturday September 23, 1pm-2pm</li>-->
-      <li>Friday September 29, 7pm-8pm</li>
+      <li>Saturday September 23, 1pm-2pm</li>
+      <li>Friday September 29, 7pm-8pm</li>-->
       <li>Friday October 6, 7pm-8pm</li>
     </div>
 
     <div class="list column">
       <h2>DIY Drywall and Trim</h2>
       <p class="note">This workshop will cover how to remove and replace drywall and insulation and how to finish drywall. How to  do  finish carpentry  like  trim  and molding will also be reviewed. Participants will learn tips on measuring and marking which is a necessary first step for this kind of task.</p>
-      <!--<li>Sunday September 24, 10:30 am - 1:30 pm</li>-->
-      <li>Saturday September 30, 4-7 pm</li>
+      <!--<li>Sunday September 24, 10:30 am - 1:30 pm</li>
+      <li>Saturday September 30, 4-7 pm</li>-->
       <li>Sunday October 8, 12-3 pm</li>
     </div>
   </div>
