stripe fix updates, minor tweaks

--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -37,7 +37,7 @@
   </div>
   {% endif %}
   <ur-tabs id="course-tabs">
-    <ur-tab title="All Classses">
+    <ur-tab title="All Classes">
       <div id="scheduled-courses"></div>
       <div class="course_divider" style="display:none">
         <h2>Classes not Scheduled</h2>
