--- a/main/templates/sides/_contact_us.html
+++ b/main/templates/sides/_contact_us.html
@@ -3,6 +3,7 @@
   <ul class="list-unstyled">
     <li><b>General Inquiry</b></li>
     <li>Got a question? Please contact us at <a href="mailto:info@txrxlabs.org">info@txrxlabs.org</a></li>
+    <li>Or call us at <a href="tel:832-481-4123">832-481-4123</a></li>
     <li>&nbsp;</li>
     <li><b>Hours of Operation</b></li>
     <li>Monday to Friday: 10 am to 10 pm</li>
