--- a/main/static/less/form.less
+++ b/main/static/less/form.less
@@ -96,6 +96,7 @@ admin-dashboard ur-form form {
   display: flex;
   justify-content: flex-start;
   .ur-input { flex-basis: auto; margin-right: 30px; }
+  .time_period { min-width: 200px; }
 }
 
 label + [type=checkbox] + .help-block { display: inline; }
