--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -99,6 +99,10 @@
 
     {% if settings.DEBUG %}
     <link href="https://uc.unrest.io/.dist/uc-built.css" rel="stylesheet"/>
+    <script src="https://uc.unrest.io/node_modules/object-hash/dist/object_hash.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.7.3/beautify.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.7.3/beautify-css.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.7.3/beautify-html.min.js"></script>
     <script src="https://uc.unrest.io/.dist/uc-built.js"></script>
     <script src="{{ STATIC_URL }}js/tests.js"></script>
     {% endif %}
