--- a/main/static/templates/admin-dashboard.html
+++ b/main/static/templates/admin-dashboard.html
@@ -15,6 +15,7 @@
     member_payments: "Yearly",
     new_members: "Canceled",
     all_payments: "Yearly memberships",
+    line_total: "Roland",
   }
   this.schema = [
     { name: 'metric', type: 'select', required: false,
