--- a/main/static/less/form.less
+++ b/main/static/less/form.less
@@ -95,8 +95,7 @@ ur-document ur-form form {
 admin-dashboard ur-form form {
   display: flex;
   justify-content: flex-start;
-  .ur-input { flex-basis: auto; margin-right: 30px; }
-  .time_period { min-width: 200px; }
+  .ur-input { flex-basis: 100px; margin-right: 30px; min-width: 150px; }
 }
 
 label + [type=checkbox] + .help-block { display: inline; }
