--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -144,7 +144,7 @@
   </p>
 
   <div class="big-button">
-    <a class="btn btn-primary" href="https://airtable.com/shrOWgN7Y1G6IqZuH">Register Here</a>
+    <a class="btn btn-primary" href="https://avenue.neighborworkscompass.org/trainingcenter">Register Here</a>
     <div class="note"> Note: Space is very limited and signing up does not guarentee enrollment. You will be sent a confirmation letter by email if your registration is approved.</div>
   </div>
   <hr/>
