Table hackers are currently publicly avalible

--- a/membership/templates/membership/memberships.html
+++ b/membership/templates/membership/memberships.html
@@ -106,7 +106,7 @@ function setHiddenFields(that) {
 <script type="text/javascript">
 $(document).ready(function() {$("select").change()});
 $(function() {
-  var locked_selector = "#m_table-hacker,#m_maker-for-profit,#m_studio-resident";
+  var locked_selector = "#m_maker-for-profit,#m_studio-resident";
   var unlocked = false;
   $(locked_selector).addClass("grayscale-me").click(function() {
     if (unlocked) {
